--- a/css/main.css
+++ b/css/main.css
@@ -762,8 +762,87 @@ select:-webkit-autofill,
 select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
     border: none;
-    -webkit-text-fill-color: #F66802;
+    -webkit-text-fill-color: #ffffff;
     transition: background-color 5000s ease-in-out 0s;
+}
+
+.contagemDados {
+    display: inline-flex;
+}
+
+
+/* Container for the first section */
+
+.col-md-3 {
+    width: 25%;
+    padding: 10px;
+    text-align: center;
+    animation: fadeInDown 1s;
+}
+
+.font-weight-600 {
+    font-weight: 600;
+}
+
+.no-margin {
+    margin: 0;
+}
+
+.timer {
+    font-size: 24px;
+}
+
+.alt-font {
+    font-family: 'Helvetica Neue', sans-serif;
+}
+
+.appear {
+    visibility: visible;
+    animation-name: fadeInDown;
+}
+
+.margin-three-bottom {
+    margin-bottom: 15px;
+}
+
+.text-center {
+    text-align: center;
+}
+
+
+/* Container for the second section */
+
+.title {
+    font-size: 20px;
+    margin-top: 20px;
+}
+
+.contagem {
+    font-size: 35px;
+    font-weight: bold;
+    display: block;
+    margin-bottom: 15px;
+    font-family: 'montserrat-semibold';
+}
+
+.plus-sign {
+    font-size: 35px;
+    margin-left: 5px;
+    color: #FF7E00;
+}
+
+
+/* Animation */
+
+@keyframes fadeInDown {
+    from {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 
@@ -1609,6 +1688,10 @@ h1.intro-header::before {
 .listPerfil {
     margin-left: 85px;
     margin-top: -9px;
+}
+
+ul li {
+    list-style: none;
 }
 
 .home-scrolldown {
