--- a/css/main.css
+++ b/css/main.css
@@ -2135,6 +2135,10 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
     .about-how-content {
         max-width: 700px;
     }
+    .about-features .features-list {
+        display: grid;
+        grid-template-columns: auto;
+    }
 }
 
 @media only screen and (max-width: 850px) {
@@ -2153,6 +2157,10 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
         padding-right: 18px;
         min-height: auto;
         padding: 0 40px .9rem 60px;
+    }
+    .about-features .features-list {
+        display: grid;
+        grid-template-columns: auto;
     }
 }
 
@@ -2180,6 +2188,10 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
         top: -9px;
         left: 7.5px;
     }
+    .about-features .features-list {
+        display: grid;
+        grid-template-columns: auto;
+    }
 }
 
 @media only screen and (max-width: 650px) {
@@ -2197,6 +2209,10 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
     }
     .about-features .feature h3 {
         margin-bottom: 1.5rem;
+    }
+    .about-features .features-list {
+        display: grid;
+        grid-template-columns: auto;
     }
 }
 
@@ -2216,6 +2232,10 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
         -webkit-transform: translateX(-50%);
         -ms-transform: translateX(-50%);
         transform: translateX(-50%);
+    }
+    .about-features .features-list {
+        display: grid;
+        grid-template-columns: auto;
     }
 }
 
