--- a/css/main.css
+++ b/css/main.css
@@ -1283,6 +1283,19 @@ h1.intro-header::before {
     transition: all 0.5s ease-in-out;
 }
 
+.header-logo-over {
+    margin: 0;
+    padding: 0;
+    outline: 0;
+    border: none;
+    width: 100%;
+    height: 70px;
+    background: url(../images/logo.png) no-repeat center;
+    background-size: 250px;
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+}
+
 
 /* ------------------------------------------------------------------- 
  * menu trigger - (_site-layout.css) 
@@ -1565,7 +1578,7 @@ h1.intro-header::before {
 }
 
 .home-content-left {
-    padding: 15rem 0 12rem 40px;
+    padding: 2rem 0 12rem 0;
     position: relative;
     width: 100%;
     display: grid;
