--- a/css/main.css
+++ b/css/main.css
@@ -1652,8 +1652,9 @@ h1.intro-header::before {
 }
 
 .imgSobre {
-    width: 355px !important;
+    width: 450px !important;
     border-radius: 10px;
+    height: 580px;
 }
 
 .imgProfissional {
