--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,7 @@
  *
  * ------------------------------------------------------------------- */
 
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap');
 @import url("font-awesome/css/font-awesome.min.css");
 @import url("micons/micons.css");
 @import url("fonts.css");
@@ -184,7 +185,7 @@ p img {
 }
 
 p.lead {
-    font-family: "muli-light", sans-serif;
+    font-family: "EB Garamond", sans-serif;
     font-size: 2.1rem;
     color: #838383;
     margin-bottom: 3.6rem;
@@ -193,6 +194,7 @@ p.lead {
 @media only screen and (max-width: 768px) {
     p.lead {
         font-size: 2rem;
+        text-align: justify;
     }
 }
 
