--- a/css/main.css
+++ b/css/main.css
@@ -1207,6 +1207,13 @@ h1.intro-header::before {
     bottom: 0;
 }
 
+#noticiaAdvg h1::before {
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+}
+
 .wide {
     max-width: 1300px;
 }
@@ -1248,7 +1255,7 @@ h1.intro-header::before {
     -ms-transform: translateX(-50%);
     transform: translateX(-50%);
     z-index: 501;
-    background-color: rgba(49, 49, 49, 0.399);
+    background-color: rgba(255, 255, 255, 0.87);
     border-radius: 10px;
 }
 
@@ -1297,6 +1304,85 @@ h1.intro-header::before {
     background-size: 250px;
     -webkit-transition: all 0.5s ease-in-out;
     transition: all 0.5s ease-in-out;
+}
+
+.capa2 {
+    background: #FB6800;
+}
+
+.capa2 .bloco {
+    position: static;
+}
+
+.capa2 .img {
+    position: absolute;
+    right: 0;
+    left: calc(50% - 60px);
+    overflow: hidden;
+    margin-top: -10px;
+    height: 786px;
+}
+
+.capa2 .img img {
+    height: 100%;
+}
+
+.capa2 .img+.tab {
+    margin: 0;
+}
+
+.capa2 .txt {
+    display: table-cell;
+    vertical-align: middle;
+    height: 700px;
+}
+
+.capa2 .img+.tab .txt {
+    /* 
+    padding-right: 100px; */
+}
+
+.capa2 .txt * {
+    text-align: center;
+}
+
+.capa2 .img+.tab .txt * {
+    text-align: left;
+    color: white;
+}
+
+.capa2 h2 {
+    padding: 0;
+    margin: 0;
+    color: white;
+    font-size: 45px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.capa2 h2:after {
+    content: '';
+    display: block;
+    background: white;
+    width: 90px;
+    height: 7px;
+    margin: 10px auto 30px;
+}
+
+.capa2 .img+.tab h2:after {
+    margin: 10px 0 30px;
+}
+
+.capa2 .texto {
+    font-size: 2rem;
+    text-align: justify;
+}
+
+#conteudo .capa2 li {
+    list-style: none;
+    padding-left: 19px;
+    font-size: 22px;
+    text-align: left;
 }
 
 
@@ -1422,16 +1508,16 @@ h1.intro-header::before {
 
 #header-nav-wrap .header-main-nav li a,
 #header-nav-wrap .header-main-nav li a:visited {
-    color: rgba(255, 255, 255, 0.45);
+    color: rgba(0, 0, 0, 0.5);
 }
 
 #header-nav-wrap .header-main-nav li a:hover,
 #header-nav-wrap .header-main-nav li a:focus {
-    color: #ffffff;
+    color: #000000;
 }
 
 #header-nav-wrap .header-main-nav li.current a {
-    color: #ffffff;
+    color: #000000;
 }
 
 #header-nav-wrap .cta {
@@ -1465,6 +1551,13 @@ h1.intro-header::before {
     }
     .header-logo-over {
         margin-top: 80%;
+    }
+    #revisaMT img {
+        width: 0px;
+    }
+    #revisaMT .capa2 .texto {
+        font-size: 2rem;
+        text-align: justify;
     }
     #header-nav-wrap {
         display: none;
@@ -1716,8 +1809,34 @@ h1.intro-header::before {
     margin-top: -9px;
 }
 
-ul li {
+#arrowList {
+    border-right: 2px solid rgb(255, 255, 255);
+    border-bottom: 2px solid rgb(255, 255, 255);
+    width: 10px;
+    height: 10px;
+    transform: rotate(-45deg);
+    margin-top: 40px;
+}
+
+.arrowList li {
+    position: relative;
+    padding-bottom: 10px;
+}
+
+.arrowList {
     list-style: none;
+}
+
+.arrowList li:before {
+    content: '';
+    position: absolute;
+    border-right: 2px solid rgb(255, 255, 255);
+    border-bottom: 2px solid rgb(255, 255, 255);
+    width: 10px;
+    height: 10px;
+    top: calc(50% - 4px);
+    left: -20px;
+    transform: translateY(-50%) rotate(-45deg);
 }
 
 .home-scrolldown {
@@ -2006,6 +2125,82 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
  *
  * ------------------------------------------------------------------- */
 
+
+/* card */
+
+.card-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #f5f5f5;
+}
+
+.card-main {
+    display: flex;
+    width: 100%;
+    max-width: 100%;
+    background-color: #fb6800;
+    color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.card-img {
+    flex-basis: 40%;
+}
+
+.card-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card-content {
+    flex-basis: 60%;
+    padding: 40px;
+}
+
+.card-title {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.card-description {
+    font-size: 16px;
+    line-height: 1.5;
+    margin-bottom: 30px;
+}
+
+.card-date {
+    display: flex;
+    justify-content: space-between;
+    font-size: 14px;
+    color: #ffffff;
+}
+
+.date {
+    margin: 0;
+}
+
+
+/* fim card */
+
+#revisaMT {
+    min-height: 786px;
+    background: #FB6800;
+    overflow: hidden;
+}
+
+#noticiaAdvg {
+    min-height: 450px;
+    background: #ffffff;
+    overflow: hidden;
+    padding-top: 25px;
+}
+
 #about {
     min-height: 786px;
     background: #ffffff;
@@ -2026,9 +2221,7 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
 }
 
 .about-features .features-list {
-    padding-top: 5.4rem;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    padding-top: 1rem;
 }
 
 .about-features .feature {
@@ -2470,7 +2663,6 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
 
 #Especialidades {
     background: #FFFFFF;
-    padding: 15rem 0 9rem;
     text-align: center;
     min-height: 600px;
 }
@@ -2632,8 +2824,8 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
 
 .Especialidades {
     background: #FFFFFF;
-    padding: 15rem 0 9rem;
     text-align: center;
+    padding-top: 25px;
     min-height: 600px;
 }
 
