--- a/css/main.css
+++ b/css/main.css
@@ -1256,7 +1256,9 @@ h1.intro-header::before {
     transform: translateX(-50%);
     z-index: 501;
     background-color: rgba(255, 255, 255, 0.87);
-    border-radius: 10px;
+    border-radius: 5px;
+    /*     max-width: 100%;
+ */
 }
 
 
@@ -1282,15 +1284,16 @@ h1.intro-header::before {
     padding: 0;
     outline: 0;
     border: none;
-    width: 97px;
-    height: 22px;
-    background: url("../images/logo.png") no-repeat center;
-    background-size: 97px 22px;
-    font: 0/0 a;
+    width: 200px;
+    height: 100px;
+    background: url(../images/logo.png) no-repeat center;
+    background-size: 150px 50px;
+    font: 0 / 0 a;
     text-shadow: none;
     color: transparent;
     -webkit-transition: all 0.5s ease-in-out;
     transition: all 0.5s ease-in-out;
+    margin-left: -30px;
 }
 
 .header-logo-over {
@@ -2991,11 +2994,30 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
     #testimonial-slider p {
         font-size: 3rem;
     }
+    .card-main {
+        flex-direction: column;
+    }
 }
 
 @media only screen and (max-width: 768px) {
     #testimonial-slider p {
         font-size: 2.6rem;
+    }
+    .card-main {
+        flex-direction: column;
+    }
+    .card-img {
+        flex: 1;
+    }
+    .card-content {
+        flex: 2;
+        padding: 16px 24px;
+    }
+    .card-title {
+        font-size: 1.75em;
+    }
+    .card-description {
+        font-size: 1.1em;
     }
     #testimonial-slider .testimonial-author img {
         width: 6.6rem;
@@ -3374,6 +3396,9 @@ footer ul a:visited {
 }
 
 @media only screen and (max-width: 600px) {
+    .card-main {
+        flex-direction: column;
+    }
     .footer-main .row {
         max-width: 480px;
     }
