--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,14 @@ html {
     html {
         font-size: 10px;
     }
+    .parallax-slider {
+        width: 100% !important;
+        height: 40vh !important;
+        /* Ajuste conforme necessário */
+        background-image: url("../images/canavarrosmobile.jpg") !important;
+        background-size: cover !important;
+        background-position: center !important;
+    }
 }
 
 @media only screen and (max-width: 400px) {
@@ -195,6 +203,14 @@ p.lead {
     p.lead {
         font-size: 2rem;
         text-align: justify;
+    }
+    .parallax-slider {
+        width: 100%;
+        height: 40vh;
+        /* Ajuste conforme necessário */
+        background-image: url("../images/hero-bg2.jpg");
+        background-size: cover;
+        background-position: center;
     }
 }
 
@@ -457,6 +473,14 @@ img.pull-left {
 @media only screen and (max-width: 768px) {
     .bgrid {
         padding: 0 15px;
+    }
+    .parallax-slider {
+        width: 100%;
+        height: 40vh;
+        /* Ajuste conforme necessário */
+        background-image: url("../images/hero-bg2.jpg");
+        background-size: cover;
+        background-position: center;
     }
 }
 
@@ -1232,6 +1256,14 @@ h1.intro-header::before {
     h1.intro-header {
         font-size: 3.1rem;
     }
+    .parallax-slider {
+        width: 100%;
+        height: 40vh;
+        /* Ajuste conforme necessário */
+        background-image: url("../images/hero-bg2.jpg");
+        background-size: cover;
+        background-position: center;
+    }
 }
 
 @media only screen and (max-width: 600px) {
@@ -1550,6 +1582,14 @@ h1.intro-header::before {
     .header-logo a {
         width: 200px;
         height: 100px;
+    }
+    .parallax-slider {
+        width: 100%;
+        height: 40vh;
+        /* Ajuste conforme necessário */
+        background-image: url("../images/hero-bg2.jpg");
+        background-size: cover;
+        background-position: center;
     }
     .header-logo-over {
         margin-top: 80%;
@@ -1960,9 +2000,17 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
 }
 
 .responsive-image {
-    width: 100% !important;
-    left: 0 !important;
-    object-fit: cover;
+    width: 100%;
+    height: auto;
+}
+
+.parallax-slider {
+    width: 100%;
+    height: 100vh;
+    /* Ajuste conforme necessário */
+    background-image: url("../images/hero-bg2.jpg");
+    background-size: cover;
+    background-position: center;
 }
 
 @media only screen and (max-width: 1200px) {
@@ -1973,9 +2021,16 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
         vertical-align: middle;
     }
     .responsive-image {
+        width: 100%;
+        height: auto;
+    }
+    .parallax-slider {
         width: 100% !important;
-        left: 0 !important;
-        object-fit: cover;
+        height: 40vh !important;
+        /* Ajuste conforme necessário */
+        background-image: url("../images/canavarrosmobile.jpg") !important;
+        background-size: cover !important;
+        background-position: center !important;
     }
     .home-content-left {
         padding: 18rem 0 12rem 40px;
@@ -2000,9 +2055,16 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
         font-size: 4.6rem;
     }
     .responsive-image {
+        width: 100%;
+        height: auto;
+    }
+    .parallax-slider {
         width: 100% !important;
-        left: 0 !important;
-        object-fit: cover;
+        height: 40vh !important;
+        /* Ajuste conforme necessário */
+        background-image: url("../images/canavarrosmobile.jpg") !important;
+        background-size: cover !important;
+        background-position: center !important;
     }
     .home-content-left h1 br {
         display: none;
@@ -2016,9 +2078,16 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
         justify-content: space-around;
     }
     .responsive-image {
+        width: 100%;
+        height: auto;
+    }
+    .parallax-slider {
         width: 100% !important;
-        left: 0 !important;
-        object-fit: cover;
+        height: 40vh !important;
+        /* Ajuste conforme necessário */
+        background-image: url("../images/canavarrosmobile.jpg") !important;
+        background-size: cover !important;
+        background-position: center !important;
     }
     .home-content-left h3 {
         font-size: 1.5rem;
@@ -2047,9 +2116,16 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
         min-height: 840px;
     }
     .responsive-image {
+        width: 100%;
+        height: auto;
+    }
+    .parallax-slider {
         width: 100% !important;
-        left: 0 !important;
-        object-fit: cover;
+        height: 40vh !important;
+        /* Ajuste conforme necessário */
+        background-image: url("../images/canavarrosmobile.jpg") !important;
+        background-size: cover !important;
+        background-position: center !important;
     }
     .listPerfil {
         margin-left: 0;
@@ -2094,9 +2170,16 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
         min-height: auto;
     }
     .responsive-image {
+        width: 100%;
+        height: auto;
+    }
+    .parallax-slider {
         width: 100% !important;
-        left: 0 !important;
-        object-fit: cover;
+        height: 40vh !important;
+        /* Ajuste conforme necessário */
+        background-image: url("../images/canavarrosmobile.jpg") !important;
+        background-size: cover !important;
+        background-position: center !important;
     }
     .home-content-left h3 {
         font-size: 1.4rem;
@@ -2111,9 +2194,16 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
         padding: 20rem 6rem 366px;
     }
     .responsive-image {
+        width: 100%;
+        height: auto;
+    }
+    .parallax-slider {
         width: 100% !important;
-        left: 0 !important;
-        object-fit: cover;
+        height: 40vh !important;
+        /* Ajuste conforme necessário */
+        background-image: url("../images/canavarrosmobile.jpg") !important;
+        background-size: cover !important;
+        background-position: center !important;
     }
     .home-content-left h1 {
         font-size: 3.3rem;
@@ -2435,6 +2525,14 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
     .about-features .feature .icon i {
         font-size: 4.4rem;
     }
+    .parallax-slider {
+        width: 100% !important;
+        height: 40vh !important;
+        /* Ajuste conforme necessário */
+        background-image: url("../images/canavarrosmobile.jpg") !important;
+        background-size: cover !important;
+        background-position: center !important;
+    }
     .about-features .feature h3 {
         font-size: 1.8rem;
     }
@@ -2667,6 +2765,14 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
         clear: both !important;
         margin-left: 0;
         margin-right: 0;
+    }
+    .parallax-slider {
+        width: 100% !important;
+        height: 40vh !important;
+        /* Ajuste conforme necessário */
+        background-image: url("../images/canavarrosmobile.jpg") !important;
+        background-size: cover !important;
+        background-position: center !important;
     }
     .pricing-table .plan-top-part,
     .pricing-table .plan-bottom-part {
@@ -3034,6 +3140,14 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
     #testimonial-slider p {
         font-size: 2.6rem;
     }
+    .parallax-slider {
+        width: 100% !important;
+        height: 40vh !important;
+        /* Ajuste conforme necessário */
+        background-image: url("../images/hero-bg2.jpg") !important;
+        background-size: cover !important;
+        background-position: center !important;
+    }
     .card-main {
         flex-direction: column;
     }
@@ -3158,6 +3272,14 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
         width: 194px;
         height: 60px;
         background-size: 194px 60px;
+    }
+    .parallax-slider {
+        width: 100% !important;
+        height: 40vh !important;
+        /* Ajuste conforme necessário */
+        background-image: url("../images/canavarrosmobile.jpg") !important;
+        background-size: cover !important;
+        background-position: center !important;
     }
 }
 
@@ -3408,6 +3530,14 @@ footer ul a:visited {
 @media only screen and (max-width: 768px) {
     .footer-main>.row {
         max-width: 600px;
+    }
+    .parallax-slider {
+        width: 100% !important;
+        height: 40vh !important;
+        /* Ajuste conforme necessário */
+        background-image: url("../images/canavarrosmobile.jpg") !important;
+        background-size: cover !important;
+        background-position: center !important;
     }
     .footer-logo {
         margin-left: auto;
